tests/baselines/reference/parserComputedPropertyName24(strict=true).errors.txt
parserComputedPropertyName24.ts(2,9): error TS7032: Property '[e]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
parserComputedPropertyName24.ts(2,10): error TS2304: Cannot find name 'e'.
parserComputedPropertyName24.ts(2,13): error TS7006: Parameter 'v' implicitly has an 'any' type.


==== parserComputedPropertyName24.ts (3 errors) ====
    class C {
        set [e](v) { }
            ~~~
!!! error TS7032: Property '[e]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
             ~
!!! error TS2304: Cannot find name 'e'.
                ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
    }